# erbsland-qt-toml-example

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example-app/: CMakeLists.txt
example-app/data/: config.toml
example-app/src/: main.cpp
